--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+kurento-media-server-6.0 (6.0.0~0) testing; urgency=medium
+
+  * Prerelease for 6.0.0
+
+ -- Jose Antonio Santos Cadenas <santoscadenas@gmail.com>  Wed, 11 Feb 2015 13:05:05 +0100
+
 kurento-media-server (5.1.0) testing; urgency=medium
 
   [ Jose Antonio Santos Cadenas ]
