--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,24 @@
+kurento-media-server (5.1.1) testing; urgency=medium
+
+  [ Jose Antonio Santos Cadenas ]
+  * Prepare for next development iteration
+  * Add build dependencies to make test work properly
+  * WebSocketRegistrar: Fix typo in registrar message
+  * Update .gitreview to work with new repo
+  * Update .gitreview to upload changes to release-5.1 branch
+
+  [ David Fernandez ]
+  * kurento-module-scaffold: Change dev.install to accept cmake versions
+  * kurento-module-scaffold: Fix bugs in gstplugin generation
+
+  [ Jose Antonio Santos Cadenas ]
+  * Require mediaserver to be installed with glib 2.42 or higher
+  * Prepare release 5.1.1
+
+  [ José Antonio Santos Cadenas ]
+
+ -- Jose Antonio Santos Cadenas <santoscadenas@gmail.com>  Fri, 27 Mar 2015 10:17:51 +0100
+
 kurento-media-server (5.1.0) testing; urgency=medium
 
   [ Jose Antonio Santos Cadenas ]
